// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup matches snapshot when is has a value 1`] = `
.css-cs17kl-RadioGroup__radioGroup {
  display: inline-block;
}

.css-1v7q1co-RadioGroup__radioWrapper {
  margin-bottom: 8px;
}

.css-1gkg9qh-RadioGroup__root {
  position: relative;
  display: inline-block;
}

.css-njatfr-RadioGroup__wrapper {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
}

.css-njatfr-RadioGroup__wrapper:hover [data-element="sprite"] {
  background: #879ba6;
}

.css-a4uemc-RadioGroup__radio {
  height: calc(24px - 4px);
  width: calc(24px - 4px);
  position: relative;
  overflow: hidden;
}

.css-y0i22o-RadioGroup__input {
  visibility: hidden;
}

.css-y0i22o-RadioGroup__input:checked + [data-element="sprite"] [data-element="icon"] {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 0;
}

.css-y0i22o-RadioGroup__input:checked + [data-element="sprite"] [data-element='locked-icon'] {
  background: #3FBC9B;
  color: #fff;
}

.css-y0i22o-RadioGroup__input:disabled + [data-element="sprite"] {
  cursor: not-allowed;
  background: #eaeff4 !important;
}

.css-y0i22o-RadioGroup__input:disabled + [data-element="sprite"] [data-element="icon"] {
  opacity: 0.7;
}

.css-tva0le-RadioGroup__label {
  margin-left: 8px;
  color: #172b4e;
  position: relative;
  top: 1px;
}

.css-tva0le-RadioGroup__label:hover {
  cursor: pointer;
}

.css-w8mlgb-RadioGroup__sprite {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border-radius: 1000px;
  background: #d3dce6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  cursor: pointer;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  overflow: hidden;
}

.css-k0mp4-RadioGroup__iconLabel {
  cursor: inherit;
  color: #fff;
  height: 100%;
  width: 100%;
  background: #3FBC9B;
  line-height: 24px;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  border-radius: 100px;
}

.css-k0mp4-RadioGroup__iconLabel > i {
  font-size: 0.8rem;
}

.css-g1tqqb-Icon__root-Icon__bold {
  color: inherit;
  font-weight: bold !important;
}

<div
  className="css-cs17kl-RadioGroup__radioGroup"
>
  <div>
    <div
      className="css-1v7q1co-RadioGroup__radioWrapper"
    >
      <div
        className="css-1gkg9qh-RadioGroup__root"
      >
        <label
          className="css-njatfr-RadioGroup__wrapper"
          htmlFor={1}
        >
          <div
            className="css-a4uemc-RadioGroup__radio"
          >
            <input
              checked={true}
              className="css-y0i22o-RadioGroup__input"
              id={1}
              onChange={[Function]}
              type="radio"
              value="1"
            />
            <div
              className="css-w8mlgb-RadioGroup__sprite"
              data-element="sprite"
            >
              <label
                className="css-k0mp4-RadioGroup__iconLabel"
                data-element="icon"
                htmlFor={1}
              >
                <i
                  className="Drycon Drycon-check css-g1tqqb-Icon__root-Icon__bold"
                />
              </label>
            </div>
          </div>
          <label
            className="css-tva0le-RadioGroup__label"
            data-element="label"
            htmlFor={1}
          >
            1
          </label>
        </label>
      </div>
    </div>
    <div
      className="css-1v7q1co-RadioGroup__radioWrapper"
    >
      <div
        className="css-1gkg9qh-RadioGroup__root"
      >
        <label
          className="css-njatfr-RadioGroup__wrapper"
          htmlFor={1}
        >
          <div
            className="css-a4uemc-RadioGroup__radio"
          >
            <input
              checked={false}
              className="css-y0i22o-RadioGroup__input"
              id={1}
              onChange={[Function]}
              type="radio"
              value="3"
            />
            <div
              className="css-w8mlgb-RadioGroup__sprite"
              data-element="sprite"
            >
              <label
                className="css-k0mp4-RadioGroup__iconLabel"
                data-element="icon"
                htmlFor={1}
              >
                <i
                  className="Drycon Drycon-check css-g1tqqb-Icon__root-Icon__bold"
                />
              </label>
            </div>
          </div>
          <label
            className="css-tva0le-RadioGroup__label"
            data-element="label"
            htmlFor={1}
          >
            2
          </label>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioGroup matches snapshot when is has no value 1`] = `
.css-cs17kl-RadioGroup__radioGroup {
  display: inline-block;
}

.css-1v7q1co-RadioGroup__radioWrapper {
  margin-bottom: 8px;
}

.css-1gkg9qh-RadioGroup__root {
  position: relative;
  display: inline-block;
}

.css-njatfr-RadioGroup__wrapper {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
}

.css-njatfr-RadioGroup__wrapper:hover [data-element="sprite"] {
  background: #879ba6;
}

.css-a4uemc-RadioGroup__radio {
  height: calc(24px - 4px);
  width: calc(24px - 4px);
  position: relative;
  overflow: hidden;
}

.css-y0i22o-RadioGroup__input {
  visibility: hidden;
}

.css-y0i22o-RadioGroup__input:checked + [data-element="sprite"] [data-element="icon"] {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 0;
}

.css-y0i22o-RadioGroup__input:checked + [data-element="sprite"] [data-element='locked-icon'] {
  background: #3FBC9B;
  color: #fff;
}

.css-y0i22o-RadioGroup__input:disabled + [data-element="sprite"] {
  cursor: not-allowed;
  background: #eaeff4 !important;
}

.css-y0i22o-RadioGroup__input:disabled + [data-element="sprite"] [data-element="icon"] {
  opacity: 0.7;
}

.css-tva0le-RadioGroup__label {
  margin-left: 8px;
  color: #172b4e;
  position: relative;
  top: 1px;
}

.css-tva0le-RadioGroup__label:hover {
  cursor: pointer;
}

.css-w8mlgb-RadioGroup__sprite {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border-radius: 1000px;
  background: #d3dce6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  cursor: pointer;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  overflow: hidden;
}

.css-k0mp4-RadioGroup__iconLabel {
  cursor: inherit;
  color: #fff;
  height: 100%;
  width: 100%;
  background: #3FBC9B;
  line-height: 24px;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  border-radius: 100px;
}

.css-k0mp4-RadioGroup__iconLabel > i {
  font-size: 0.8rem;
}

.css-g1tqqb-Icon__root-Icon__bold {
  color: inherit;
  font-weight: bold !important;
}

<div
  className="css-cs17kl-RadioGroup__radioGroup"
>
  <div>
    <div
      className="css-1v7q1co-RadioGroup__radioWrapper"
    >
      <div
        className="css-1gkg9qh-RadioGroup__root"
      >
        <label
          className="css-njatfr-RadioGroup__wrapper"
          htmlFor={1}
        >
          <div
            className="css-a4uemc-RadioGroup__radio"
          >
            <input
              checked={false}
              className="css-y0i22o-RadioGroup__input"
              id={1}
              onChange={[Function]}
              type="radio"
              value="1"
            />
            <div
              className="css-w8mlgb-RadioGroup__sprite"
              data-element="sprite"
            >
              <label
                className="css-k0mp4-RadioGroup__iconLabel"
                data-element="icon"
                htmlFor={1}
              >
                <i
                  className="Drycon Drycon-check css-g1tqqb-Icon__root-Icon__bold"
                />
              </label>
            </div>
          </div>
          <label
            className="css-tva0le-RadioGroup__label"
            data-element="label"
            htmlFor={1}
          >
            1
          </label>
        </label>
      </div>
    </div>
    <div
      className="css-1v7q1co-RadioGroup__radioWrapper"
    >
      <div
        className="css-1gkg9qh-RadioGroup__root"
      >
        <label
          className="css-njatfr-RadioGroup__wrapper"
          htmlFor={1}
        >
          <div
            className="css-a4uemc-RadioGroup__radio"
          >
            <input
              checked={false}
              className="css-y0i22o-RadioGroup__input"
              id={1}
              onChange={[Function]}
              type="radio"
              value="3"
            />
            <div
              className="css-w8mlgb-RadioGroup__sprite"
              data-element="sprite"
            >
              <label
                className="css-k0mp4-RadioGroup__iconLabel"
                data-element="icon"
                htmlFor={1}
              >
                <i
                  className="Drycon Drycon-check css-g1tqqb-Icon__root-Icon__bold"
                />
              </label>
            </div>
          </div>
          <label
            className="css-tva0le-RadioGroup__label"
            data-element="label"
            htmlFor={1}
          >
            2
          </label>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioGroup matches snapshot when is read only 1`] = `
.css-10jseif-Icon__root {
  color: inherit;
}

.css-cs17kl-RadioGroup__radioGroup {
  display: inline-block;
}

.css-1v7q1co-RadioGroup__radioWrapper {
  margin-bottom: 8px;
}

.css-1gkg9qh-RadioGroup__root {
  position: relative;
  display: inline-block;
}

.css-a4uemc-RadioGroup__radio {
  height: calc(24px - 4px);
  width: calc(24px - 4px);
  position: relative;
  overflow: hidden;
}

.css-y0i22o-RadioGroup__input {
  visibility: hidden;
}

.css-y0i22o-RadioGroup__input:checked + [data-element="sprite"] [data-element="icon"] {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 0;
}

.css-y0i22o-RadioGroup__input:checked + [data-element="sprite"] [data-element='locked-icon'] {
  background: #3FBC9B;
  color: #fff;
}

.css-y0i22o-RadioGroup__input:disabled + [data-element="sprite"] {
  cursor: not-allowed;
  background: #eaeff4 !important;
}

.css-y0i22o-RadioGroup__input:disabled + [data-element="sprite"] [data-element="icon"] {
  opacity: 0.7;
}

.css-tva0le-RadioGroup__label {
  margin-left: 8px;
  color: #172b4e;
  position: relative;
  top: 1px;
}

.css-tva0le-RadioGroup__label:hover {
  cursor: pointer;
}

.css-w8mlgb-RadioGroup__sprite {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border-radius: 1000px;
  background: #d3dce6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  cursor: pointer;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  overflow: hidden;
}

.css-k0mp4-RadioGroup__iconLabel {
  cursor: inherit;
  color: #fff;
  height: 100%;
  width: 100%;
  background: #3FBC9B;
  line-height: 24px;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  transition: all 0.15s cubic-bezier(0.44,0.11,0.07,1.29);
  border-radius: 100px;
}

.css-k0mp4-RadioGroup__iconLabel > i {
  font-size: 0.8rem;
}

.css-1pay92b-RadioGroup__wrapper-RadioGroup__readOnly {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
  pointer-events: none;
}

.css-1pay92b-RadioGroup__wrapper-RadioGroup__readOnly:hover [data-element="sprite"] {
  background: #879ba6;
}

.css-1pay92b-RadioGroup__wrapper-RadioGroup__readOnly [data-element="sprite"] {
  background: #eaeff4 !important;
}

.css-1pay92b-RadioGroup__wrapper-RadioGroup__readOnly [data-element="locked-icon"] {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  border-radius: 0;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #879ba6;
}

<div
  className="css-cs17kl-RadioGroup__radioGroup"
>
  <div>
    <div
      className="css-1v7q1co-RadioGroup__radioWrapper"
    >
      <div
        className="css-1gkg9qh-RadioGroup__root"
      >
        <label
          className="css-1pay92b-RadioGroup__wrapper-RadioGroup__readOnly"
          htmlFor={1}
        >
          <div
            className="css-a4uemc-RadioGroup__radio"
          >
            <input
              checked={true}
              className="css-y0i22o-RadioGroup__input"
              id={1}
              onChange={[Function]}
              type="radio"
              value="1"
            />
            <div
              className="css-w8mlgb-RadioGroup__sprite"
              data-element="sprite"
            >
              <label
                className="css-k0mp4-RadioGroup__iconLabel"
                data-element="locked-icon"
              >
                <i
                  className="css-10jseif-Icon__root Drycon Drycon-lock"
                />
              </label>
            </div>
          </div>
          <label
            className="css-tva0le-RadioGroup__label"
            data-element="label"
            htmlFor={1}
          >
            1
          </label>
        </label>
      </div>
    </div>
    <div
      className="css-1v7q1co-RadioGroup__radioWrapper"
    >
      <div
        className="css-1gkg9qh-RadioGroup__root"
      >
        <label
          className="css-1pay92b-RadioGroup__wrapper-RadioGroup__readOnly"
          htmlFor={1}
        >
          <div
            className="css-a4uemc-RadioGroup__radio"
          >
            <input
              checked={false}
              className="css-y0i22o-RadioGroup__input"
              id={1}
              onChange={[Function]}
              type="radio"
              value="3"
            />
            <div
              className="css-w8mlgb-RadioGroup__sprite"
              data-element="sprite"
            >
              <label
                className="css-k0mp4-RadioGroup__iconLabel"
                data-element="locked-icon"
              >
                <i
                  className="css-10jseif-Icon__root Drycon Drycon-lock"
                />
              </label>
            </div>
          </div>
          <label
            className="css-tva0le-RadioGroup__label"
            data-element="label"
            htmlFor={1}
          >
            2
          </label>
        </label>
      </div>
    </div>
  </div>
</div>
`;
